--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "zerostep",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "ZeroStep is a small library to wire modules and manage their lifecycles",
   "main": "index.js",
   "scripts": {
     "test": "mocha spec/*.js && eslint index.js spec/*.js",
-    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -- -u exports -R spec spec/*.spec.js"
+    "coverage": "./node_modules/.bin/_mocha -- -- -u exports -R spec spec/*.spec.js"
   },
   "repository": {
     "type": "git",
@@ -23,10 +23,9 @@
   },
   "homepage": "https://github.com/relayr/zerostep#Readme.md",
   "devDependencies": {
-    "chai": "4.2.0",
-    "eslint-config-relayr": "1.4.0",
-    "istanbul": "0.4.5",
-    "mocha": "^6.2.2",
-    "sinon": "^7.5.0"
+    "chai": "4.3.4",
+    "eslint-config-relayr": "1.8.3",
+    "mocha": "6.2.3",
+    "sinon": "8.1.1"
   }
 }
